<resources>
    <!-- pantalla de registro -->
    <string name="app_name">GeToken</string>
    <string name="register_nombre"></string>
    <string name="register_rut"></string>
    <string name="register_email"></string>
    <string name="register_pin"></string>
    <string name="register_repitapin"></string>
    <string name="boton_registrarse"></string>
    <string name="Yaregistrado"></string>
    <string name="registrate">Registrate</string>
    <string name="ingrese_sus_datos">Ingrese sus datos</string>
    <string name="boton_siguiente">Siguiente</string>
    <string name="ya_estas_registrado">¿Ya estas registrado?</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="rut">Rut</string>
    <string name="correo_electronico">Correo electronico</string>
    <string-array name="tipo_usuario"></string-array>
    <string name="MensajeError"></string>

    <!-- pantalla de login -->
    <string name="Bienvenido"></string>
    <string name="login_rut"></string>
    <string name="login_pin"></string>
    <string name="boton_login">Ingresar</string>
    <string name="Noregistrado">Registrarse</string>

    <!-- pantalla de registro profesor -->
    <string-array name="spinner_semestre"></string-array>
    <string name="radioGroups"></string>
    <string name="boton_siguiente_pro">Siguiente</string>
    <string name="errorTextWiew"></string>

    <!-- pantalla de registro estudiante -->
    <string-array name="spinner_carrera"></string-array>
    <string-array name="spinner_semestre_es"></string-array>
    <string-array name="spinner_sede"></string-array>
    <string-array name="spinner_jornada"></string-array>
    <string name="boton_registrarse_est"></string>

    <!-- pantalla de registro estudiante -->
    <string name="nombre_estudiante"></string>
    <string name="correo_estudiante"></string>


    <string name="nombresAlumnos"></string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="todos_los_alumnos">Todos los Alumnos</string>
    <string name="container_layout_id">containerLayout</string>


    <!-- pantalla de Detalles alumno profesor -->
    <string name="textViewNombre"></string>
    <string name="textViewEmail"></string>
    <string name="textViewRut"></string>
    <string name="textViewCarrera"></string>
    <string name="textViewJornada"></string>
    <string name="textViewSede"></string>
    <string name="boton_asignarToken"></string>

    <!-- pantalla de Reglas de token-->
    <string name="botonAsignar"></string>
    <string name="editTextRecompensa"></string>
    <string name="editTextPlazo"></string>
    <string-array name="spinnerTokens"></string-array>
    <string name="aSeccionToken"></string>

    <!-- pantalla de item token profesor-->
    <string name="TextViewCodigo"></string>

    <!-- pantalla Tokens profesor -->
    <string name="boton_agregar_token"></string>
    <string name="buttonAgregarNuevoToken"></string>
    <string name="editTextCodigoToken"></string>


    <string name="fecha_token"></string>
    <string name="nombreprofesor_token"></string>
    <string name="recompensa"></string>
    <string name="boton_usar"></string>
    <string name="boton_perdida"></string>
    <string name="QR"></string>

    <!-- pantalla token perdido -->
    <string name="fechaperdida"></string>
    <string name="editTextMensajePerdida"></string>
    <string name="botonNotificar"></string>
    <string-array name="spinnerPerdido"></string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="inicio">Inicio</string>
    <string name="tokens">Tokens</string>
    <string name="alumno">Alumno</string>
    <string name="asignatura">Asignatura</string>
    <string name="perfil">Perfil</string>
    <string name="bottom_navigation">bottom_navigation</string>
    <string name="boton1">Ver Mas</string>


    <string name="recyclerViewTokensEstudiante"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>