<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE3E3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recuadro"
        android:layout_width="337dp"
        android:layout_height="595dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="@drawable/cuadro_redondo"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371">

        <EditText
            android:id="@+id/login_pin"

            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:hint="Pin"
            android:inputType="number"
            android:textColor="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.536"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.26" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="22sp"
            android:layout_height="25sp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_rut"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521"
            app:srcCompat="@drawable/lock_solid" />

        <TextView
            android:id="@+id/Bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="30dp"
            android:fontFamily="sans-serif"
            android:text="Bienvenido"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="88dp"
            android:contentDescription="TODO"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bienvenido"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_token" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/ingrese_sus_datos"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.072" />

        <EditText
            android:id="@+id/login_rut"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:hint="@string/rut"
            android:inputType="textPersonName"
            android:textColor="#A6A6A6"
            android:textColorHighlight="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.055" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="22sp"
            android:layout_height="25sp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_rut"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.394"
            app:srcCompat="@drawable/user_solid" />

        <Button
            android:id="@+id/boton_login"
            android:layout_width="202sp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="120dp"
            android:backgroundTint="#DCDCDC"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/boton_login"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pin"
            app:layout_constraintVertical_bias="0.166" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="¿No estas registrado?"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.295"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_login"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/Noregistrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:elevation="10dp"
            android:text="@string/Noregistrado"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_login"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>