<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE3E3"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recuadro"
        android:layout_width="334dp"
        android:layout_height="634dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="@drawable/cuadro_redondo"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="196dp"
            android:layout_height="53dp"
            android:background="@drawable/cuadro_redondo"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.815">

            <Spinner
                android:id="@+id/tipo_usuario"
                android:layout_width="184dp"
                android:layout_height="51dp"
                android:backgroundTint="#000000"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/register_repitapin"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:hint="Repita Pin"
            android:inputType="number"
            android:textColor="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.468"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/register_rut"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:hint="Rut"
            android:inputType="number"
            android:textColor="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.072"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/register_pin"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:hint="Pin"
            android:inputType="number"
            android:textColor="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.33"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="22sp"
            android:layout_height="25sp"
            android:layout_marginStart="28dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628"
            app:srcCompat="@drawable/lock_solid" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="22sp"
            android:layout_height="25sp"
            android:layout_marginStart="28dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541"
            app:srcCompat="@drawable/lock_solid" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/lilita_one"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailSubject"
            android:textColor="#A6A6A6"
            android:textColorHint="#A6A6A6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.192"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="22sp"
            android:layout_height="25sp"
            android:layout_marginStart="28dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.451"
            app:srcCompat="@drawable/envelope_solid" />

        <TextView
            android:id="@+id/Bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/registrate"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="88dp"
            android:contentDescription="TODO"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bienvenido"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_token" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/ingrese_sus_datos"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.044" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Ingrese su tipo de usuario"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.623" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="22sp"
            android:layout_height="25sp"
            android:layout_marginStart="28dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.371"
            app:srcCompat="@drawable/user_solid" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/ya_estas_registrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.255"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/boton_registrarse"
            android:layout_width="202sp"
            android:layout_height="48dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#DCDCDC"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/boton_siguiente"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Yaregistrado"
            android:layout_width="90dp"
            android:layout_height="19dp"
            android:layout_marginTop="48dp"
            android:elevation="10dp"
            android:text="Iniciar sesion"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/boton_registrarse"
            app:layout_constraintVertical_bias="0.055" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>