<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE3E3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recuadro"
        android:layout_width="334dp"
        android:layout_height="654dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:background="@drawable/cuadro_redondo"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <TextView
            android:id="@+id/Yaregistrado"
            android:layout_width="90dp"
            android:layout_height="19dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:elevation="10dp"
            android:text="Iniciar sesion"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/boton_siguiente_pro"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/Bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/registrate"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.032" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="122dp"
            android:layout_height="88dp"
            android:contentDescription="TODO"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Bienvenido"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/mesa_de_trabajo_1sasa" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="¿Que asignaturas imparte?"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.314" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Seleccione un semestre"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.064" />

        <RadioGroup
            android:id="@+id/radioGroups"
            android:layout_width="201dp"
            android:layout_height="225dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="173dp"
            android:layout_height="62dp"
            android:background="@drawable/cuadro_redondo"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361">

            <Spinner
                android:id="@+id/spinner_semestre"
                android:layout_width="160dp"
                android:layout_height="51dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/boton_siguiente_pro"
            android:layout_width="202sp"
            android:layout_height="48dp"
            android:backgroundTint="#DCDCDC"
            android:elevation="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="Registrarse"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="24dp"
            android:text="@string/ya_estas_registrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/boton_siguiente_pro"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="313dp"
            android:layout_height="19dp"
            android:layout_marginTop="224dp"
            android:text="@string/errorTextWiew"
            android:textAlignment="center"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toTopOf="@+id/boton_siguiente_pro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroups" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>